--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 :root {
   /* colors */
   --background: #282c33;
+  --gray: #ccced2;
   --gray: #abb2bf;
   --primary: #c778dd;
   --white: #ffffff;
